# BitBuddy

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  dox.config  resources.qrc
.qt/: QtDeploySupport.cmake
bitbuddy_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
bitbuddy_autogen/26E4343VLD/: moc_BitBuddyActionButton.cpp.d  moc_BitBuddyStatusWidget.cpp.d
bitbuddy_autogen/6YEA5652QU/: moc_LauncherWindow.cpp.d  moc_MainWindow.cpp.d
bitbuddy_autogen/OBZ36IEKUH/: moc_BitBuddySpriteHandler.cpp.d  moc_EventDispatcherService.cpp.d
bitbuddy_autogen/Q6AU6LSD6J/: moc_BitBuddy.cpp.d
docs/html/: _bit_buck_generator_8cpp.html  _bit_buck_generator_8cpp__incl.map  _bit_buck_generator_8cpp__incl.md5  _bit_buck_generator_8h.html  _bit_buck_generator_8h__dep__incl.map  _bit_buck_generator_8h__dep__incl.md5  _bit_buck_generator_8h__incl.map  _bit_buck_generator_8h__incl.md5  _bit_buck_generator_8h_source.html  _bit_buddy_8cpp.html  _bit_buddy_8cpp__incl.map  _bit_buddy_8cpp__incl.md5  _bit_buddy_8h.html  _bit_buddy_8h__dep__incl.map  _bit_buddy_8h__dep__incl.md5  _bit_buddy_8h__incl.map  _bit_buddy_8h__incl.md5  _bit_buddy_8h_source.html  _bit_buddy_action_button_8cpp.html  _bit_buddy_action_button_8cpp__incl.map  _bit_buddy_action_button_8cpp__incl.md5  _bit_buddy_action_button_8h.html  _bit_buddy_action_button_8h__dep__incl.map  _bit_buddy_action_button_8h__dep__incl.md5  _bit_buddy_action_button_8h__incl.map  _bit_buddy_action_button_8h__incl.md5  _bit_buddy_action_button_8h_source.html  _bit_buddy_attribute_8cpp.html  _bit_buddy_attribute_8cpp__incl.map  _bit_buddy_attribute_8cpp__incl.md5  _bit_buddy_attribute_8h.html  _bit_buddy_attribute_8h__dep__incl.map  _bit_buddy_attribute_8h__dep__incl.md5  _bit_buddy_attribute_8h__incl.map  _bit_buddy_attribute_8h__incl.md5  _bit_buddy_attribute_8h_source.html  _bit_buddy_attribute_name_8cpp.html  _bit_buddy_attribute_name_8cpp__incl.map  _bit_buddy_attribute_name_8cpp__incl.md5  _bit_buddy_attribute_name_8h.html  (+528 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  (+42 more)
docs/latex/: _bit_buck_generator_8cpp.tex  _bit_buck_generator_8cpp__incl.md5  _bit_buck_generator_8h.tex  _bit_buck_generator_8h__dep__incl.md5  _bit_buck_generator_8h__incl.md5  _bit_buck_generator_8h_source.tex  _bit_buddy_8cpp.tex  _bit_buddy_8cpp__incl.md5  _bit_buddy_8h.tex  _bit_buddy_8h__dep__incl.md5  _bit_buddy_8h__incl.md5  _bit_buddy_8h_source.tex  _bit_buddy_action_button_8cpp.tex  _bit_buddy_action_button_8cpp__incl.md5  _bit_buddy_action_button_8h.tex  _bit_buddy_action_button_8h__dep__incl.md5  _bit_buddy_action_button_8h__incl.md5  _bit_buddy_action_button_8h_source.tex  _bit_buddy_attribute_8cpp.tex  _bit_buddy_attribute_8cpp__incl.md5  _bit_buddy_attribute_8h.tex  _bit_buddy_attribute_8h__dep__incl.md5  _bit_buddy_attribute_8h__incl.md5  _bit_buddy_attribute_8h_source.tex  _bit_buddy_attribute_name_8cpp.tex  _bit_buddy_attribute_name_8cpp__incl.md5  _bit_buddy_attribute_name_8h.tex  _bit_buddy_attribute_name_8h__dep__incl.md5  _bit_buddy_attribute_name_8h__incl.md5  _bit_buddy_attribute_name_8h_source.tex  _bit_buddy_events_8cpp.tex  _bit_buddy_events_8cpp__incl.md5  _bit_buddy_events_8h.tex  _bit_buddy_events_8h__dep__incl.md5  _bit_buddy_events_8h__incl.md5  _bit_buddy_events_8h_source.tex  _bit_buddy_service_8cpp.tex  _bit_buddy_service_8cpp__incl.md5  _bit_buddy_service_8h.tex  _bit_buddy_service_8h__dep__incl.md5  (+271 more)
game/include/: MainWindow.h  README.md  SettingsWindow.h
game/include/component/: BitBuddyActionButton.h  BitBuddyStatusWidget.h  LightButton.h  StatsButton.h  UserBankAccountBalanceWidget.h  lightButton.h
game/include/model/: BitBuckGenerator.h  BitBuddy.h  BitBuddyAttribute.h  BitBuddyAttributeName.h  BitBuddyEvents.h  DeprecatedEventListener.h  Event.h  SingleAttributeEvent.h  UserBankAccount.h  audio.h  board.h
game/include/service/: BitBuddyService.h  BitBuddySpriteHandler.h  EventDispatcherService.h  EventGeneratorService.h  FileStorageService.h  GameService.h  MusicService.h  TransactionService.h  UserBankAccountService.h  XOController.h
game/include/window/: BoardWindow.h  BuddyWindow.h  LauncherWindow.h  SettingsWindow.h  ShopWindow.h  StatsWindow.h  TieWindow.h  xoGameBoard.h  xoPlayerWindow.h
game/src/: LauncherWindow.cpp  MainWindow.cpp  SettingsWindow.cpp  StatsWindow.cpp  main.cpp
game/src/component/: BitBuddyActionButton.cpp  BitBuddyStatusWidget.cpp  LightButton.cpp  StatsButton.cpp  UserBankAccountBalanceWidget.cpp  lightButton.cpp
game/src/model/: BitBuckGenerator.cpp  BitBuddy.cpp  BitBuddyAttribute.cpp  (+5 more)
include/: LauncherWindow.h  MainWindow.h  SettingsWindow.h  StatsWindow.h
include/component/: BitBuddyActionButton.h  BitBuddyStatusWidget.h  BitBuddyWidget.h  StatsButton.h  lightButton.h
include/model/: BitBuddy.h  BitBuddyAttribute.h  BitBuddyAttributeName.h  BitBuddyEvents.h  DeprecatedEventListener.h  EventListener.h  SingleAttributeEvent.h  audio.h
include/service/: BitBuddySpriteHandler.h  EventDispatcherService.h  EventGeneratorService.h  FileStorageService.h  GameService.h  MusicService.h
src/: LauncherWindow.cpp  MainWindow.cpp  README.md  SettingsWindow.cpp  StatsWindow.cpp  main.cpp
src/component/: BitBuddyActionButton.cpp  BitBuddyStatusWidget.cpp  BitBuddyWidget.cpp  StatsButton.cpp  lightButton.cpp
src/model/: BitBuddy.cpp  BitBuddyAttribute.cpp  BitBuddyAttributeName.cpp  BitBuddyEvents.cpp  Event.cpp  SingleAttributeEvent.cpp  audio.cpp
src/service/: BitBuddySpriteHandler.cpp  EventDispatcherService.cpp  EventGeneratorService.cpp  FileStorageService.cpp  GameService.cpp  MusicService.cpp
(+19 files in other folders)
